@startuml
' #ffbb00 - Controller
' #00b32a - Service
' #0077ff - Repository

' DATA STRUCTERS
class User {
    + id: number
    + username: string
    + password: string
    + email: string
    + birthDate: Date
    + phoneNumber: string
    + firstName: string
    + lastName: string
    + accountCreationDate: Date
    + authenticationLevel: number
    + isActive: boolean
    + userFriends1: UserFriends[]
    + userFriends2: UserFriends[]
    + products: Product[]
    + userProducts: UserProduct[]
}

class ProductDTO {
    + id?: number
    + producer: string
    + name: string
    + unit: string
    + amout: number
    + kcal: number
    + protein: number
    + carbohydrates: number
    + fats: number
    + creatorId: number
}

interface ProductModification {
    + userId: number
    + product: ProductDTO
}
ProductModification --* ProductDTO

interface ProductDeletion {
    + userId: number
    + productId: number
}

class Product {
    + id: number
    + producer: string
    + name: string
    + unit: string
    + amount: number
    + kcal: number
    + protein: number
    + carbohydrates: number
    + fats: number
    + creator: User
}
Product --* User

interface UserProductModification {
    + userId: number
    + userProduct: UserProductDTO
}
UserProductModification --* UserProductDTO

interface UserProductDeletion {
    + userId: number
    + userProductId: number
}

interface UserProductsByDateDTO{
    + userId: number
    + date: Date
}

interface UserProductsByDateRangeDTO{
    + userId: number
    + start: Date
    + end: Date
}

class UserProductDTO {
    + id?: number
    + productId: number
    + amount: number
    + date?: Date
    + mealTimeType: MealEatTimeType
    + userId: number
}
UserProductDTO --* MealEatTimeType

enum MealEatTimeType {
    BREAKFAST
    LUNCH
    DINNER
    SUPPER
}

class UserProduct {
    + id: number
    + product: Product
    + amount: number
    + date: Date
    + mealTimeType: MealEatTimeType
    + user: User
}
UserProduct --* User
UserProduct -left-* Product
UserProduct --* MealEatTimeType
@enduml